--- a/Hotel.WebPortal/Hotel.WebPortal/Views/Home/Index.cshtml
+++ b/Hotel.WebPortal/Hotel.WebPortal/Views/Home/Index.cshtml
@@ -1,4 +1,12 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Builder;
+@using Microsoft.AspNetCore.Localization;
+@using Microsoft.Extensions.Options;
+@using Microsoft.AspNetCore.Mvc.Localization
+
+@inject IOptions<RequestLocalizationOptions> locOptions
+@inject IViewLocalizer _lang
+
+@{
     ViewData["Title"] = "Home Page";
     Layout = "_HomeLayout";
 }
@@ -7,3 +15,39 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<div class="col-md-5">
+    <form id="cultureForm" action="Index">
+        <br /> <br /> <br /> <br /> <br />
+          @_lang["chLang"]
+
+
+
+        <br /> <br /> <br /> <br /> <br />
+        <select onchange="ChangeCulture(this.value);">
+            <option>
+                @_lang["chLang"]
+            </option>
+
+            @foreach (var item in locOptions.Value.SupportedUICultures)
+            {
+                <option value="@item.Name">@item.Name | @item.DisplayName</option>
+            }
+
+        </select>
+        <br /> <br /> <br /> <br /> <br style="clear:both"/>
+    </form>
+
+</div>
+
+
+
+@section scripts{
+    <script>
+        function ChangeCulture(selectionValue) {
+            var culture = "/?culture=" + selectionValue;
+            console.log(selectionValue);
+            document.getElementById("cultureForm").action = culture;
+            document.getElementById("cultureForm").submit();
+        }
+    </script>
+}
