--- a/Hotel.WebPortal/Hotel.WebPortal/Views/Shared/_HomeLayout.cshtml
+++ b/Hotel.WebPortal/Hotel.WebPortal/Views/Shared/_HomeLayout.cshtml
@@ -235,5 +235,6 @@
     <script src="~/js/jquery.magnific-popup.js"></script>
     <script src="~/js/plugins.js"></script>
     <script src="~/js/main.js"></script>
+    @RenderSection("scripts", false)
 </body>
 </html>
